Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -290,7 +290,7 @@
             
             <div data-silex-type="container" class="editable-style silex-id-1424710230648 container-element hide-on-mobile" data-silex-id="silex-id-1424710230648">
                 <div data-silex-type="container" class="editable-style container-element silex-id-1424710433398 editable-plugin-created" data-silex-id="silex-id-1424710433398">
-                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil" style="">
+                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element page-link-active" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil" style="">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Accueil</div>
                         </div>
@@ -332,7 +332,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil paged-element-hidden" data-silex-id="silex-id-1484949486466-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil" data-silex-id="silex-id-1484949486466-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949486465-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949486465-4">
             <div data-silex-type="text" class="editable-style text-element silex-id-1424920356950 paragraph" data-silex-id="silex-id-1424920356950">
                 <div class="silex-element-content normal">
@@ -364,7 +364,7 @@ relation à l’autre qui passe par le toucher.<br></p>
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail-" data-silex-id="silex-id-1484949640479-7">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail- paged-element-hidden" data-silex-id="silex-id-1484949640479-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949640479-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949640479-6">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485636-2" data-silex-id="silex-id-1434426485636-2">
                 <div class="silex-element-content normal">
@@ -398,25 +398,25 @@ carrés suffisent et j'apporte le matériel. Il est possible de recevoir
 quatre personnes par heure. Tarif : sur devis.</p>
                 </div>
             </div>
-        <div data-silex-type="container" class="editable-style silex-id-1434426787582-9 container-element" data-silex-id="silex-id-1434426787582-9" style=""></div><div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188332860-3 paged-element-hidden" data-silex-id="silex-id-1535188332860-3" style="">
+        <div data-silex-type="container" class="editable-style silex-id-1434426787582-9 container-element" data-silex-id="silex-id-1434426787582-9" style=""></div><div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188332860-3" data-silex-id="silex-id-1535188332860-3" style="">
                 <div class="silex-element-content normal">Le saviez-vous ?<br><p class="normal">En France en 2007, le coût social du stress a été estimé entre 2 et 3 milliards d’euros (étude INRS et Arts et Métiers ParisTech). Plus d’informations sur le site de l’INRS<br><br><br><br></p>
                 </div>
             </div></div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-personnes-fragilis-es" data-silex-id="silex-id-1484949717487-9">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949717487-9 section-element paged-element page-personnes-fragilis-es paged-element-hidden" data-silex-id="silex-id-1484949717487-9">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949717486-8 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949717486-8">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1471343044963-3" data-silex-id="silex-id-1471343044963-3">
                 <div class="silex-element-content normal">Tout le monde a le droit d’être touché ! Y compris les personnes âgées, handicapées ou souffrant d'une maladie chronique qui ont également besoin de détente et de relaxation par le toucher. Il s'agit d'aider la personne à mieux vivre son corps ou encore de lui proposer une démarche d'accompagnement qui répond à un besoin de mieux être.<br><br>Je propose des séances de toucher-massage® en intervenant en établissement, en EHPAD, en Ehpa, mas, fam sur la métropole lilloise. <br><br>Tarif : sur devis.<br></div>
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element paged-element-hidden" data-silex-id="silex-id-1535188603126-4">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element" data-silex-id="silex-id-1535188603126-4">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1535188603126-5" data-silex-id="silex-id-1535188603126-5">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188603126-6" data-silex-id="silex-id-1535188603126-6">
                 <div class="silex-element-content normal"><br>mathieu.massage@posteo.net<br>06.27.58.06.64<br>siret : à venir !<br></div>
             </div>
         </div>
-    </div><div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535190052316-10 page-particuliers paged-element" data-silex-id="silex-id-1535190052316-10">
+    </div><div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535190052316-10 page-particuliers paged-element paged-element-hidden" data-silex-id="silex-id-1535190052316-10">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1535190052316-11" data-silex-id="silex-id-1535190052316-11">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535190052316-12" data-silex-id="silex-id-1535190052316-12">
                 <div class="silex-element-content normal"><br>Je proposerai aux particuliers les massages qui suivent dès que possible car je ne dispose actuellement pas de lieu où les pratiquer !<br>&nbsp;<br>Le massage essentiel® est un massage de l’ensemble du corps, sur table, à l’huile et d’une durée d’une heure. C’est un massage qui constitue une profonde relaxation et apporte de la détente. Il est possible de choisir un massage sectoriel comme tout l’arrière du corps : c’est le grand relaxant, d’une durée de 45 minutes. Pour ceux qui ont l'habitude de se faire masser : ces massages recourent à la fois aux techniques du massage californien avec des manœuvres enveloppantes (mais sans protocole, ce qui permet notamment au praticien plus de créativité) et du massage suédois (massage local et en profondeur).<br>&nbsp;<br>Une séance de relaxinésie® et de stretch-massage® se reçoit avec des vêtements amples ou souples. Elle se pratique à même le sol (sur un matelas confortable) ou sur table et permet à la personne qui la reçoit d’expérimenter le lâcher-prise. Ce massage consiste en une succession de mobilisations des membres, des étirements doux et des pressions et procure un relâchement complet. Une séance de relaxinésie® et de stretch-massage® est particulièrement adaptée aux personnes qui recherchent de la détente tout en restant habillé. Les personnes que je masse sont souvent surprises du profond niveau de détente que leur apporte une telle séance, parfois plus qu'un massage à l'huile.<br><br>Lorsqu'on convient d'une durée, alors il s'agit de celle du massage, ce qui implique une durée de séance supérieure. J’utilise exclusivement des huiles de massage biologiques.<br>&nbsp;<br><br><br></div>
