Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -290,14 +290,14 @@
             
             <div data-silex-type="container" class="editable-style silex-id-1424710230648 container-element hide-on-mobile" data-silex-id="silex-id-1424710230648">
                 <div data-silex-type="container" class="editable-style container-element silex-id-1424710433398 editable-plugin-created" data-silex-id="silex-id-1424710433398">
-                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil" style="">
+                    <div data-silex-type="text" class="editable-style text-element silex-id-1424710332527 nav-element page-link-active" data-silex-id="silex-id-1424710332527" data-silex-href="#!page-accueil" style="">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Accueil</div>
                         </div>
                     </div>
                 </div>
                 <div data-silex-type="container" class="editable-style silex-id-1426536866650 editable-plugin-created container-element" data-silex-id="silex-id-1426536866650">
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0 page-link-active" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434425184890-0" data-silex-id="silex-id-1434425184890-0" data-silex-href="#!page-au-travail-">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Au travail !</div>
                         </div>
@@ -332,7 +332,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil paged-element-hidden" data-silex-id="silex-id-1484949486466-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949486466-5 section-element paged-element page-accueil" data-silex-id="silex-id-1484949486466-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949486465-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949486465-4">
             <div data-silex-type="text" class="editable-style text-element silex-id-1424920356950 paragraph" data-silex-id="silex-id-1424920356950">
                 <div class="silex-element-content normal">
@@ -364,7 +364,7 @@ relation à l’autre qui passe par le toucher.<br></p>
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail-" data-silex-id="silex-id-1484949640479-7">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1484949640479-7 section-element paged-element page-au-travail- paged-element-hidden" data-silex-id="silex-id-1484949640479-7">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1484949640479-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1484949640479-6">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1434426485636-2" data-silex-id="silex-id-1434426485636-2">
                 <div class="silex-element-content normal">
