Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -305,7 +305,7 @@
                 </div>
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634286306-0" data-silex-id="silex-id-1434634286306-0">
 
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634286307-1 page-link-active" data-silex-id="silex-id-1434634286307-1" data-silex-href="#!page-personnes-fragilis-es">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634286307-1" data-silex-id="silex-id-1434634286307-1" data-silex-href="#!page-personnes-fragilis-es">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Personnes fragilisées</div>
                         </div>
@@ -313,7 +313,7 @@
                 </div>
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634331833-2" data-silex-id="silex-id-1434634331833-2">
 
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3 page-link-active" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Contact</div>
                         </div>
