Create 20180825 essai second style.html

--- a/20180825 essai second style.html
+++ b/20180825 essai second style.html
@@ -313,7 +313,7 @@
                 </div>
                 <div data-silex-type="container" class="editable-style editable-plugin-created container-element silex-id-1434634331833-2" data-silex-id="silex-id-1434634331833-2">
 
-                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3 page-link-active" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
+                    <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1434634331834-3" data-silex-id="silex-id-1434634331834-3" data-silex-href="#!page-contact">
                         <div class="silex-element-content normal">
                             <div style="text-align: center;">Contact</div>
                         </div>
@@ -410,13 +410,13 @@ quatre personnes par heure. Tarif : sur devis.</p>
             </div>
         <div data-silex-type="container" class="editable-style container-element silex-id-1535190799136-0" data-silex-id="silex-id-1535190799136-0" style=""></div></div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element" data-silex-id="silex-id-1535188603126-4">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535188603126-4 page-contact paged-element paged-element-hidden" data-silex-id="silex-id-1535188603126-4">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1535188603126-5" data-silex-id="silex-id-1535188603126-5">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535188603126-6" data-silex-id="silex-id-1535188603126-6">
                 <div class="silex-element-content normal"><br>mathieu.massage@posteo.net<br>06.27.58.06.64<br>siret : à venir !<br></div>
             </div>
         </div>
-    </div><div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535190052316-10 page-particuliers paged-element paged-element-hidden" data-silex-id="silex-id-1535190052316-10">
+    </div><div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style section-element silex-id-1535190052316-10 page-particuliers paged-element" data-silex-id="silex-id-1535190052316-10">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1535190052316-11" data-silex-id="silex-id-1535190052316-11">
             <div data-silex-type="text" class="editable-style text-element paragraph silex-id-1535190052316-12" data-silex-id="silex-id-1535190052316-12">
                 <div class="silex-element-content normal"><br>Je proposerai aux particuliers les massages qui suivent dès que possible car je ne dispose actuellement pas de lieu où les pratiquer !<br>&nbsp;<br>Le massage essentiel® est un massage de l’ensemble du corps, sur table, à l’huile et d’une durée d’une heure. C’est un massage qui constitue une profonde relaxation et apporte de la détente. Il est possible de choisir un massage sectoriel comme tout l’arrière du corps : c’est le grand relaxant, d’une durée de 45 minutes. Pour ceux qui ont l'habitude de se faire masser : ces massages recourent à la fois aux techniques du massage californien avec des manœuvres enveloppantes (mais sans protocole, ce qui permet notamment au praticien plus de créativité) et du massage suédois (massage local et en profondeur).<br>&nbsp;<br>Une séance de relaxinésie® et de stretch-massage® se reçoit avec des vêtements amples ou souples. Elle se pratique à même le sol (sur un matelas confortable) ou sur table et permet à la personne qui la reçoit d’expérimenter le lâcher-prise. Ce massage consiste en une succession de mobilisations des membres, des étirements doux et des pressions et procure un relâchement complet. Une séance de relaxinésie® et de stretch-massage® est particulièrement adaptée aux personnes qui recherchent de la détente tout en restant habillé. Les personnes que je masse sont souvent surprises du profond niveau de détente que leur apporte une telle séance, parfois plus qu'un massage à l'huile.<br><br>Lorsqu'on convient d'une durée, alors il s'agit de celle du massage, ce qui implique une durée de séance supérieure. J’utilise exclusivement des huiles de massage biologiques.<br>&nbsp;<br><br><br></div>
