--- a/20180830_construction.html
+++ b/20180830_construction.html
@@ -59,7 +59,7 @@
 
     <div class="background editable-style container-element prevent-draggable silex-id-1439572548754-9" data-silex-type="container" data-silex-id="silex-id-1439572548754-9">
         
-        <div data-silex-type="container" class="editable-style container-element page-page-1 paged-element animated fadeInLeft silex-id-1439572548552-7" data-silex-id="silex-id-1439572548552-7">
+        <div data-silex-type="container" class="editable-style container-element animated fadeInLeft silex-id-1439572548552-7" data-silex-id="silex-id-1439572548552-7">
 
 
 
